[tool.poetry]
name = "dramatiq"
version = "1.1.3-post1"
description = "Background Processing for Python 3."
authors = ["Bogdan Popa <bogdan@cleartype.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rabbitmq = "*"
pika = ">=1.0,<2.0"
redis = ">=2.0,<5.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
